Production Push + Removed Gitignore for .env temporarily

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,12 @@
+#Jay's Ignore
+
+ezcampus_venv
+
+
 ########################################################################################################################
 # Project specific / langauge unspecific section of the .gitignore
 ########################################################################################################################
 
-# dotenv
-.env
-*.env
 
 # logs
 .log
