--- a/.env
+++ b/.env
@@ -11,6 +11,6 @@ db_dir="./"
 fastapi_host = "0.0.0.0"
 fastapi_port = "8000"
 auth_secret_key = "your-secret-key"
-origins_domain = "http://0.0.0.0:3000"
+origins_domain = "https://api.ezcampus.org"
 
 auth_secret_key = "your-secret-key"
