Add experimental google services

--- a/.env.example
+++ b/.env.example
@@ -8,7 +8,10 @@ db_user="username"
 db_pass="password"
 db_dir="./"
 
-fastapi_host = "0.0.0.0"
-fastapi_port = "8000"
-auth_secret_key = "your-secret-key"
-origins_domain = "http://0.0.0.0:3000"
+fastapi_host="0.0.0.0"
+fastapi_port="8000"
+auth_secret_key="your-secret-key"
+origins_domain="http://0.0.0.0:3000"
+
+google_auth_flow_port="8080"
+google_client_credentials="client_secret.json"
