--- a/requirements.txt
+++ b/requirements.txt
@@ -3,10 +3,13 @@
 bcrypt~=4.0.1
 fastapi~=0.95.2
 fastapi-login~=1.9.0
+google-api-python-client~=2.93.0
+google-auth-oauthlib~=1.0.0
 mysql-connector-python~=8.0.33
 pydantic~=1.10.8
 python-dateutil~=2.8.2
 python-dotenv~=1.0.0
+pytz~=2023.3
 SQLAlchemy~=2.0.13
 starlette~=0.27.0
 uvicorn~=0.22.0
