--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ PyJWT~=2.7.0
 python-dateutil~=2.8.2
 python-dotenv~=1.0.0
 pytz~=2023.3
+requests~=2.31.0
 SQLAlchemy~=2.0.13
 starlette~=0.27.0
 uvicorn~=0.22.0
