--- a/.env.example
+++ b/.env.example
@@ -13,7 +13,7 @@ fastapi_port="8000"
 auth_secret_key="your-secret-key"
 origins_domain="http://0.0.0.0:3000"
 
-jwt_secret_key="your-secret-key"
+session_secret_key="your-secret-key"
 
 google_redirect_uri="https://api.ezcampus.org"
 google_client_credentials="client_secret.json"
