--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ fastapi~=0.95.2
 fastapi-login~=1.9.0
 google-api-python-client~=2.93.0
 google-auth-oauthlib~=1.0.0
+itsdangerous~=2.1.2
 mysql-connector-python~=8.0.33
 pydantic~=1.10.8
 python-dateutil~=2.8.2
