--- a/.env.example
+++ b/.env.example
@@ -1,17 +1,21 @@
 ENV_VERSION_NAME = "example env"
-DEBUG = 1
+debug = 1
 
-db_host="0.0.0.0"
-db_port="3306"
-db_name="name"
-db_user="username"
-db_pass="password"
-db_dir="./"
+LOG_DIR="./logs"
+LOG_FILE="FastAPI Backend__time__.log"
+LOG_LEVEL=20
 
-fastapi_host="0.0.0.0"
-fastapi_port="8000"
-auth_secret_key="your-secret-key"
-origins_domain="http://0.0.0.0:3000"
+DB_HOST="0.0.0.0"
+DB_PORT="3306"
+DB_NAME="name"
+DB_USER="username"
+DB_PASSWORD="password"
+DB_DIR="./"
+
+FASTAPI_HOST="0.0.0.0"
+FASTAPI_PORT="8000"
+AUTH_SECRET_KEY="your-secret-key"
+ORIGINS_DOMAIN="http://0.0.0.0:3000"
 
 session_secret_key="your-secret-key"
 
