--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,9 @@ google-api-python-client~=2.93.0
 google-auth-oauthlib~=1.0.0
 itsdangerous~=2.1.2
 mysql-connector-python~=8.0.33
+numpy~=1.25.2
+openpyxl~=3.1.2
+pandas~=2.1.0
 pydantic~=1.10.8
 python-dateutil~=2.8.2
 python-dotenv~=1.0.0
